@@ -86,6 +86,3 @@ jsonrpc = localhost:8000
 
 # Default language code
 # language = en_US
-
-# Timezone of the server
-# timezone = False
