@@ -29,8 +29,6 @@ this repository contains the full copyright notices and license terms. -->
         <page string="Preferences" col="2" id="preferences">
             <label name="language"/>
             <field name="language" widget="selection"/>
-            <label name="timezone"/>
-            <field name="timezone"/>
         </page>
     </notebook>
 </form>
