@@ -29,7 +29,6 @@ class TrytonServer(object):
 
         CONFIG.update_etc(options['configfile'])
         CONFIG.update_cmdline(options)
-        CONFIG.set_timezone()
 
         if CONFIG['logfile']:
             logf = CONFIG['logfile']
